# django-fast-iprestrict

./: LICENSE  README.md  manage.py  pyproject.toml  test_settings.py  tox.ini
.github/workflows/: test.yml
django_fast_iprestrict/: __init__.py  admin.py  apps.py  forms.py  middleware.py  models.py  utils.py  validators.py
django_fast_iprestrict/management/commands/: iprestrict_unrestrict_all.py  ratelimit_clear_caches.py  ratelimit_unrestrict_all.py
django_fast_iprestrict/migrations/: 0001_initial.py  0002_split_rule.py  0003_migrate_rule.py  0004_cleanup_rule.py  0004_remove_rule_rule.py  0005_add_ratelimit_fix_generator_fn.py  0006_rule_invert_methods_rule_methods_and_more.py  0007_ruleratelimitgroup_and_more.py  0008_add_managed_fields.py  0009_alter_ruleratelimit_rate.py  0010_alter_ruleratelimit_rate.py  0011_correct_ruleratelimitgroup_unique.py  0012_alter_ruleratelimit_rate.py
django_fast_iprestrict/templates/admin/django_fast_iprestrict/: change_list.html  lockout_prevented.html
django_fast_iprestrict/templates/admin/django_fast_iprestrict/rule/: change_list.html
tests/: functions.py  test_basic.py
