[tool.poetry]
name = "django-fast-iprestrict"
version = "0.5.0a2"
description = ""
authors = ["alex <devkral@web.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/devkral/django-fast-iprestrict"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Framework :: Django",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Security"
]


[tool.poetry.dependencies]
python = ">=3.10,<4.0"
django = ">=4.0"
django-fast-ratelimit = {version = ">=4.1.1", optional=true }

[tool.poetry.extras]
ratelimit = [
    "django-fast-ratelimit",
]
[tool.poetry.group.test.dependencies]
tox = "*"
django-fast-ratelimit = ">=4.1.1"

[tool.poetry.group.dev.dependencies]
tox = "*"
faker = "*"
django-fast-ratelimit = ">=4.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
