[tool.poetry]
name = "django-fast-iprestrict"
version = "0.10.0"
description = ""
authors = ["alex <devkral@web.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/devkral/django-fast-iprestrict"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Framework :: Django",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Security"
]


[tool.poetry.dependencies]
python = ">=3.9,<4.0"
django = ">=4.0"
django-fast-ratelimit = {version = ">=5.0.0", optional=true }

[tool.poetry.extras]
ratelimit = [
    "django-fast-ratelimit",
]
# installed by default
[tool.poetry.group.test.dependencies]
tox = "*"
# for conversion
coverage = "*"

# installed by default
[tool.poetry.group.dev.dependencies]
faker = "*"
django-fast-ratelimit = ">=5.0.0"
django = [
    {version = "<5.0", python = "<3.10"},
    {version = ">=5.0", python = ">=3.10"}
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
